<resources>
    <string name="app_name">Itask</string>
    <string name="home">Home</string>
    <string name="setting">Settings</string>
    <string name="check">Check</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createCategory">Create Category</string>
    <string name="createTask">Create Task</string>
    <string name="addCategory">Add Category</string>
    <string name="addTask">Add Task</string>
    <string name="category">Category</string>
    <string name="chooseLabelColor">Pick Color Label :</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="purple">Purple</string>
    <string name="addButton">Add</string>
    <string name="task">Task</string>
    <string name="taskDescription">Description</string>
    <string name="date">Date</string>
    <string name="reminder">Reminder</string>
    <string name="cdImageDateTask">Selected Date Of Task</string>
    <string name="chooseDateTask">Choose Date</string>
    <string name="contentInputCategory">Select Category</string>
    <string name="selectCategory">Select Category</string>
    <string name="closeButton">Close</string>
    <string name="dueDateTask">Due Date</string>
    <string name="time">Time</string>
    <string name="history">History</string>
    <string name="addSubTask">Add Sub Task</string>
    <string name="subtask">Sub Task</string>
    <string name="saveButton">Save</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="nextWeek">Next Week</string>
    <string name="messageSaveSuccess">Data has been saved</string>
    <string name="messageSaveError">Error, </string>
    <string name="messageCancel">Data has been cancelled</string>
    <string name="messageComplete">Task has been completed</string>
    <string name="messageActive">Data has been activated</string>
    <string name="messageNotActive">Data has been inactivated</string>
    <string name="completeButton">Complete</string>
    <string name="cancelButton">Cancel</string>
    <string name="selectDate">Select Date</string>
    <string name="setTime">Set Time</string>
    <string name="messageValidInputCategory">Category, Color Label are mandatory</string>
    <string name="messageValidInputTask">Task Title, Category, Due Date are mandatory</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="Credits">Credits</string>
    <string name="ActiveCategory">Active ?</string>
    <string name="search">Search</string>
    <string name="searchTask">Search Title</string>
    <string name="search_hint">Search by Title</string>
    <string name="string_logoitask">Logo Itask</string>
    <string name="iconclose">Close Icon</string>
    <string name="colorCategory">Color of Category</string>
    <string name="openToDetailTask">Open Detail Task</string>
    <string name="openDate">Open Date Dialog</string>
    <string name="openTime">Open Time Dialog</string>
    <string name="openAlarm">Open Alarm</string>
    <string name="deleteSubtask">Delete SubTask</string>
    <string name="taskNotificationTitle">iTask Reminder</string>
    <string name="pref_key_notify">key_notification</string>
    <string name="pref_notify_name">Notification</string>
    <string name="pref_notify_summary">Reminder iTask</string>
    <string name="pref_key_interval_notif">key_interval</string>
    <string name="pref_interval_title_notif">Interval Reminder</string>
    <string name="title_activity_settings">Settings Activity</string>

    <string name="pref_interval_1">1</string>
    <string name="pref_interval_3">3</string>
    <string name="pref_interval_6">6</string>
    <string name="pref_interval_12">12</string>
    <string name="interval_1">Every 1 Hour</string>
    <string name="interval_3">Every 3 Hours</string>
    <string name="interval_6">Every 6 Hours</string>
    <string name="interval_12">Every 12 Hours</string>

</resources>