<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtCategory"
        style="@style/customEdittextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:hint="@string/category"
        android:inputType="text"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtLabelColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/chooseLabelColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCategory" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLabelColor"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipColorRed"
                style="@style/chipRedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipColorBlue"
                style="@style/chipBlueStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipColorYellow"
                style="@style/chipYellowStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipColorGreen"
                style="@style/chipGreenStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipColorPurple"
                style="@style/chipPurpleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purple" />


        </com.google.android.material.chip.ChipGroup>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddCategory"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/addButton"
            android:textColor="@color/white"

            android:textSize="15sp"
            app:backgroundTint="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCloseCategory"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/closeButton"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            app:backgroundTint="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnAddCategory"
            app:layout_constraintTop_toBottomOf="@+id/chipColor" />
</androidx.constraintlayout.widget.ConstraintLayout>



