<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/checkTaskCat"
        android:layout_width="28dp"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/primaryColor"
        android:buttonTint="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageColorTaskCat"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/colorCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/round_background_bottom_menu" />

    <TextView
        android:id="@+id/tvTitleTaskCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/task"
        android:textSize="15sp"

        app:layout_constraintStart_toEndOf="@+id/imageColorTaskCat"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCategoryTaskCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:text="@string/category"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageColorTaskCat"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleTaskCat" />

    <TextView
        android:id="@+id/tvDueDateHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:text="@string/dueDateTask"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/checkTaskCat"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleTaskCat" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/whiteDark"
        app:layout_constraintTop_toBottomOf="@+id/imageColorTaskCat" />


</androidx.constraintlayout.widget.ConstraintLayout>