<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtInputSubTask"
        style="@style/customEdittextStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/subtask"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddSubTask"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_button"
        android:text="@string/addButton"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:backgroundTint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputSubTask" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCloseSubTask"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/closeButton"
        android:textColor="@color/primaryColor"
        android:textSize="15sp"
        app:backgroundTint="@color/yellow"
        app:layout_constraintEnd_toStartOf="@+id/btnAddSubTask"
        app:layout_constraintTop_toBottomOf="@+id/txtInputSubTask" />
</androidx.constraintlayout.widget.ConstraintLayout>