<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addTask.fragment.AddTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageCloseAddTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/iconclose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_close_24" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtTitleTask"
                style="@style/customEdittextStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/task"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageCloseAddTask" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardSelectCategory"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:foreground="@drawable/selector_cardview"
                app:cardCornerRadius="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitleTask">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageColorTask"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/colorCategory"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/round_background_bottom_menu" />

                    <TextView
                        android:id="@+id/tvCategoryTask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/category"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@+id/imageColorTask"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageArrowCategoryTask"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/openToDetailTask"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"

                        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOpenSubTask"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/custom_button"
                android:text="@string/addSubTask"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:backgroundTint="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardSelectCategory" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtSubTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:capitalize="words"
                android:text="@string/subtask"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnOpenSubTask" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSubTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:foreground="@drawable/selector_cardview"
                app:cardCornerRadius="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSubTask">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_addSubTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/selector_recyclerview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtSubTask" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDueDateTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/dueDateTask"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardSubTask" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardSelectDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:foreground="@drawable/selector_cardview"
                app:cardCornerRadius="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDueDateTask">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <ImageButton
                        android:id="@+id/imageDateTask"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/cdImageDateTask"
                        android:src="@drawable/ic_baseline_date_range_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvLabelDateTask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/date"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@+id/imageDateTask"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/tvDateTask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/date"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toStartOf="@+id/imageArrowDateTask"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageArrowDateTask"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/openDate"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"

                        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardSelectTime"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:foreground="@drawable/selector_cardview"
                app:cardCornerRadius="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardSelectDate">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/imageTimeTask"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/cdImageDateTask"
                        android:minWidth="48dp"
                        android:src="@drawable/ic_baseline_access_time_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/tvLabelTimeTask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/time"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@+id/imageTimeTask"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/tvTimeTask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/time"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toStartOf="@+id/imageArrowTimeTask"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageArrowTimeTask"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/openTime"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"

                        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <ImageView
                android:id="@+id/imageAlarmTask"
                android:layout_width="40dp"

                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/primaryColor"
                android:contentDescription="@string/openAlarm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardSelectTime"
                app:srcCompat="@drawable/ic_baseline_access_alarm_24" />


            <Switch
                android:id="@+id/switchReminderTask"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/reminder"
                app:layout_constraintStart_toEndOf="@+id/imageAlarmTask"
                app:layout_constraintTop_toBottomOf="@+id/cardSelectTime" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddTask"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/saveButton"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:backgroundTint="@color/primaryColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchReminderTask" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</ScrollView>
